--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ numpy==1.24.3
 openapi-schema-pydantic==1.2.4
 packaging==23.1
 pydantic==1.10.7
+pypdf==3.8.1
 PyYAML==6.0
 requests==2.30.0
 SQLAlchemy==2.0.12
