--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,17 @@ blinker==1.6.2
 certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
+ctransformers==0.2.4
 dataclasses-json==0.5.7
+datasets~=2.12.0
 faiss-cpu==1.7.4
 Flask==2.3.2
 frozenlist==1.3.3
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
-langchain==0.0.187
-llama-cpp-python==0.1.57
+langchain==0.0.188
+llama-cpp-python==0.1.55
 MarkupSafe==2.1.2
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
