--- a/requirements.txt
+++ b/requirements.txt
@@ -6,28 +6,28 @@ blinker==1.6.2
 certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
-ctransformers==0.2.8
+ctransformers==0.2.10
 dataclasses-json==0.5.8
-datasets~=2.12.0
+datasets==2.13.1
 faiss-cpu==1.7.4
 Flask==2.3.2
 frozenlist==1.3.3
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
-langchain==0.0.198
-llama-cpp-python==0.1.62
+langchain==0.0.209
+llama-cpp-python==0.1.65
 MarkupSafe==2.1.3
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
 multidict==6.0.4
 mypy-extensions==1.0.0
 numexpr==2.8.4
-numpy==1.24.3
+numpy==1.25.0
 openapi-schema-pydantic==1.2.4
 packaging==23.1
 pydantic==1.10.9
-pypdf==3.9.1
+pypdf==3.11.0
 PyYAML==6.0
 requests==2.31.0
 SQLAlchemy==2.0.16
@@ -35,6 +35,7 @@ tenacity==8.2.2
 tqdm==4.65.0
 typing-inspect==0.9.0
 typing_extensions==4.6.3
+unstructured==0.7.8
 urllib3==2.0.3
 Werkzeug==2.3.6
 yarl==1.9.2
