--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,14 @@
-aiohttp==3.8.5
-aiosignal==1.3.1
-async-timeout==4.0.3
-attrs==23.1.0
-blinker==1.6.2
+blinker==1.7.0
+cachelib==0.10.2
 certifi==2023.7.22
-charset-normalizer==3.3.0
+charset-normalizer==3.3.2
 click==8.1.7
-ctransformers==0.2.27
-dataclasses-json==0.6.1
-datasets==2.14.5
-faiss-cpu==1.7.4
 Flask==3.0.0
-frozenlist==1.4.0
+Flask-Session==0.5.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
-langchain==0.0.308
-llama-cpp-python==0.2.11
 MarkupSafe==2.1.3
-marshmallow==3.20.1
-marshmallow-enum==1.5.1
-multidict==6.0.4
-mypy-extensions==1.0.0
-numexpr==2.8.7
-numpy==1.25.1
-openapi-schema-pydantic==1.2.4
-packaging==23.2
-pydantic==1.10.11
-pypdf==3.16.2
-PyYAML==6.0.1
 requests==2.31.0
-SQLAlchemy==2.0.21
-tenacity==8.2.3
-tqdm==4.66.1
-typing-inspect==0.9.0
-typing_extensions==4.8.0
-unstructured==0.10.19
-urllib3==2.0.6
-Werkzeug==3.0.0
-yarl==1.9.2
+urllib3==2.0.7
+Werkzeug==3.0.1
