--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
     "build_mini": "esbuild server/static/js/app.ts --bundle  --minify --sourcemap --outfile=server/static/js/app.min.js"
   },
   "dependencies": {
+    "@ricky0123/vad-web": "^0.0.13",
     "esbuild": "^0.17.17",
     "highlight.js": "^11.7.0",
     "markdown-it": "^13.0.1",
     "markdown-it-highlightjs": "^4.0.1",
-    "socket.io-client": "^4.7.2"
+    "msr": "^1.3.4",
+    "socket.io-client": "^4.7.2",
+    "voice-activity-detection": "^0.0.5",
+    "webrtcvad": "^1.0.1"
   },
   "devDependencies": {
     "@types/markdown-it": "^12.2.3"
