--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,13 @@ MarkupSafe==2.1.3
 requests==2.31.0
 urllib3==2.0.7
 Werkzeug==3.0.1
+
+torch~=2.1.1
+numpy~=1.26.1
+langchain~=0.0.340
+SQLAlchemy~=2.0.23
+tqdm~=4.66.1
+beautifulsoup4~=4.12.2
+py7zr~=0.20.8
+transformers~=4.35.0
+datasets~=2.14.6
