--- a/package.json
+++ b/package.json
@@ -6,13 +6,7 @@
   "dependencies": {
     "@ricky0123/vad-web": "^0.0.13",
     "esbuild": "^0.17.17",
-    "highlight.js": "^11.7.0",
-    "markdown-it": "^13.0.1",
-    "markdown-it-highlightjs": "^4.0.1",
-    "msr": "^1.3.4",
-    "socket.io-client": "^4.7.2",
-    "voice-activity-detection": "^0.0.5",
-    "webrtcvad": "^1.0.1"
+    "highlight.js": "^11.7.0"
   },
   "devDependencies": {
     "@types/markdown-it": "^12.2.3"
