--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   },
   "dependencies": {
     "esbuild": "^0.17.17",
-    "highlight.js": "^11.7.0",
-    "markdown-it": "^13.0.1",
-    "markdown-it-highlightjs": "^4.0.1"
+    "highlight.js": "^11.7.0"
   },
   "devDependencies": {
-    "@types/markdown-it": "^12.2.3"
+
   }
 }
