--- a/requirements.txt
+++ b/requirements.txt
@@ -7,19 +7,20 @@ Flask==3.0.0
 Flask-Session==0.5.0
 idna==3.6
 itsdangerous==2.1.2
-Jinja2==3.1.2
+Jinja2==3.1.3
 MarkupSafe==2.1.3
 requests==2.31.0
 urllib3==2.1.0
 Werkzeug==3.0.1
-
-langchain==0.0.352
-SQLAlchemy~=2.0.23
+langchain==0.1.0
+SQLAlchemy==2.0.25
 tqdm~=4.66.1
 beautifulsoup4~=4.12.2
 py7zr~=0.20.8
 transformers==4.36.2
 torch==2.1.2
-datasets==2.15.0
+datasets==2.16.1
 python-magic~=0.4.27
 scipdf~=0.1.dev0
+# unstructured[doc]==0.12.0
+# unstructured[doc]
