--- a/requirements.txt
+++ b/requirements.txt
@@ -12,13 +12,17 @@ MarkupSafe==2.1.5
 requests==2.32.0
 urllib3==2.2.2
 Werkzeug==3.0.2
-langchain==0.3.7
+langchain~=0.3.20
 SQLAlchemy==2.0.29
 tqdm~=4.66.3
 beautifulsoup4==4.12.3
 py7zr==0.21.0
 transformers==4.47.0
-torch==2.6.0
+torch==2.5.1
 datasets==2.19.0
 python-magic~=0.4.27
-scipdf-parser
+# scipdf-parser
+marker-pdf[full]
+langchain-community~=0.3.19
+langchain-core~=0.3.43
+faiss-cpu
